--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,31 +1,53 @@
-- name: WebserverPlaybook
-  hosts: ws1
+# - name: WebserverPlaybook
+#   hosts: webservers
+#   become: yes
+#   tasks:
+#     - name: Install nginx
+#       apt:
+#         name: nginx
+#         state: present
+#         update_cache: true
+#     - name: create www directory if they don't exist
+#       file:
+#         path: /home/{{ ansible_user }}/www
+#         state: directory
+#     - name: Copy nginx configuration
+#       template:
+#         src: ./website.j2
+#         dest: /etc/nginx/sites-available/website.conf
+#     - name: Enable the website
+#       file:
+#         src: /etc/nginx/sites-available/website.conf
+#         dest: /etc/nginx/sites-enabled/default
+#         state: link
+#     - name: Start nginx
+#       service:
+#         name: nginx
+#         state: restarted
+#         enabled: true
+#     - name: Copy index.html
+#       template:
+#         src: ./www/index.j2
+#         dest: /home/{{ ansible_user }}/www/index.html
+
+- name: LoadBalancerPlaybook
+  hosts: loadbalancer
   become: yes
+  vars:
+    haproxy_algorithm: roundrobin
   tasks:
-    - name: Install nginx
+    - debug: var=hostvars["ws1"].ansible_host
+    - name: Install HAProxy
       apt:
-        name: nginx
+        name: haproxy
         state: present
         update_cache: true
-    - name: create www directory if they don't exist
-      file:
-        path: /home/{{ ansible_user }}/www
-        state: directory
-    - name: Copy nginx configuration
-      template:
-        src: ./website.j2
-        dest: /etc/nginx/sites-available/website.conf
-    - name: Enable the website
-      file:
-        src: /etc/nginx/sites-available/website.conf
-        dest: /etc/nginx/sites-enabled/default
-        state: link
-    - name: Start nginx
+    - name: Enable HAProxy
       service:
-        name: nginx
-        state: restarted
+        name: haproxy
+        state: started
         enabled: true
-    - name: Copy index.html
-      copy:
-        src: ./www/index.html
-        dest: /home/{{ ansible_user }}/www/
+    - name: Put HAProxy configuration
+      template:
+        src: ./haproxy.cfg.j2
+        dest: /etc/haproxy/haproxy.cfg
