--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,53 +1,53 @@
-# - name: WebserverPlaybook
-#   hosts: webservers
-#   become: yes
-#   tasks:
-#     - name: Install nginx
-#       apt:
-#         name: nginx
-#         state: present
-#         update_cache: true
-#     - name: create www directory if they don't exist
-#       file:
-#         path: /home/{{ ansible_user }}/www
-#         state: directory
-#     - name: Copy nginx configuration
-#       template:
-#         src: ./website.j2
-#         dest: /etc/nginx/sites-available/website.conf
-#     - name: Enable the website
-#       file:
-#         src: /etc/nginx/sites-available/website.conf
-#         dest: /etc/nginx/sites-enabled/default
-#         state: link
-#     - name: Start nginx
-#       service:
-#         name: nginx
-#         state: restarted
-#         enabled: true
-#     - name: Copy index.html
-#       template:
-#         src: ./www/index.j2
-#         dest: /home/{{ ansible_user }}/www/index.html
+- name: WebserverPlaybook
+  hosts: webservers
+  become: true
+  tasks:
+    - name: Install nginx
+      apt:
+        name: nginx
+        state: present
+        update_cache: true
+    - name: create www directory if they don't exist
+      file:
+        path: /home/{{ ansible_user }}/www
+        state: directory
+    - name: Copy nginx configuration
+      template:
+        src: ./website.j2
+        dest: /etc/nginx/sites-available/website.conf
+    - name: Enable the website
+      file:
+        src: /etc/nginx/sites-available/website.conf
+        dest: /etc/nginx/sites-enabled/default
+        state: link
+    - name: Start nginx
+      service:
+        name: nginx
+        state: restarted
+        enabled: true
+    - name: Copy index.html
+      template:
+        src: ./www/index.j2
+        dest: /home/{{ ansible_user }}/www/index.html
 
 - name: LoadBalancerPlaybook
   hosts: loadbalancer
-  become: yes
+  become: true
   vars:
     haproxy_algorithm: roundrobin
   tasks:
-    - debug: var=hostvars["ws1"].ansible_host
+    - debug: var=hostvars["ws1"].ansible_host # Note: We use this for debug purposes
     - name: Install HAProxy
       apt:
         name: haproxy
         state: present
         update_cache: true
-    - name: Enable HAProxy
-      service:
-        name: haproxy
-        state: started
-        enabled: true
     - name: Put HAProxy configuration
       template:
         src: ./haproxy.cfg.j2
         dest: /etc/haproxy/haproxy.cfg
+    - name: Restart and enable HAProxy
+      service:
+        name: haproxy
+        state: restarted
+        enabled: true
